aop+修改新增用户提交头像字段的过程